src/test/deca/syntax/valid/LE/AttAvecInit.deca
//test pour les classes
//attribut declare avec une valeur 

class C1 {
    int a  ;
    float b = 15 ;
    
}