src/test/deca/syntax/invalid/LE/visibilite1.deca
//test invalide
//classe declarant les attributs avec une mauvaise visibilite

class C1 {
    bisule int a ;
}